Fix background color for Safari on iPhone

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,8 +130,12 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    background-color: var(--app_background);
+  }
   body {
     @apply bg-background text-foreground;
+    background-color: var(--app_background) !important;
   }
 }
 
